--- a/ASS4_EurekaHysterix/pom.xml
+++ b/ASS4_EurekaHysterix/pom.xml
@@ -65,6 +65,16 @@
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.5.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
